// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBars AG-10525 should render tooltips with no errorbars 1`] = `
NodeList [
  <div
    aria-hidden="true"
    class="ag-charts-tooltip ag-charts-tooltip--no-interaction ag-charts-tooltip--arrow-bottom ag-charts-tooltip--wrap-hyphenate"
    data-presented-as-popover=""
    popover="manual"
    style="pointer-events: none; top: 0px; left: 0px;"
  >
    <div
      class="ag-charts-tooltip-content"
    >
      <div
        class="ag-charts-tooltip-row"
      >
        <span
          class="ag-charts-tooltip-label"
        >
          May
        </span>
         
        <span
          class="ag-charts-tooltip-value"
        >
          14.5
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`ErrorBars should render default tooltips 1`] = `
NodeList [
  <div
    aria-hidden="true"
    class="ag-charts-tooltip ag-charts-tooltip--no-interaction ag-charts-tooltip--arrow-bottom ag-charts-tooltip--wrap-hyphenate"
    data-presented-as-popover=""
    popover="manual"
    style="pointer-events: none; top: 0px; left: 0px;"
  >
    <div
      class="ag-charts-tooltip-content"
    >
      <span
        class="ag-charts-tooltip-symbol"
      >
        <svg
          height="12"
          viewBox="0 0 12 12"
          width="12"
        >
          <g
            transform="matrix(0.9230769230769231 0 0 0.9230769230769231 6 6)"
          >
            <path
              d="M 6 0 C 6 3.3137084989847603 3.3137084989847607 6 3.6739403974420594e-16 6 C -3.31370849898476 6 -6 3.313708498984761 -6 7.347880794884119e-16 C -6 -3.3137084989847594 -3.313708498984761 -5.999999999999999 -1.102182119232618e-15 -6 C 3.3137084989847594 -6.000000000000001 5.999999999999999 -3.3137084989847616 6 -1.4695761589768238e-15 Z"
              fill="#f3622d"
              fill-opacity="0.8"
              stroke="#aa4520"
              stroke-opacity="1"
              stroke-width="1"
            />
          </g>
        </svg>
      </span>
      <div
        class="ag-charts-tooltip-row"
      >
        <span
          class="ag-charts-tooltip-label"
        >
          volume
        </span>
         
        <span
          class="ag-charts-tooltip-value"
        >
          2.5
        </span>
      </div>
       
      <div
        class="ag-charts-tooltip-row"
      >
        <span
          class="ag-charts-tooltip-label"
        >
          pressure
        </span>
         
        <span
          class="ag-charts-tooltip-value"
        >
          4.2
        </span>
      </div>
    </div>
  </div>,
]
`;
